--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,87 +1,75 @@
 ---
-version: '3.7'
+version: '3'
 services:
   nginx:
-    build:
-      context: ./
-      dockerfile: Dockerfile.nginx
-    image: defectdojo/defectdojo-nginx:${NGINX_VERSION:-latest}
-    depends_on:
+    image: defectdojo/defectdojo-nginx:latest
+    links:
       - uwsgi
     environment:
-      NGINX_METRICS_ENABLED: ${NGINX_METRICS_ENABLED:-false}
-    ports:
-      - target: 8080
-        published: ${DD_PORT:-8080}
-        protocol: tcp
-        mode: host
-      - target: 8443
-        published: ${DD_TLS_PORT:-8443}
-        protocol: tcp
-        mode: host
+      NGINX_METRICS_ENABLED: 'false'
+    ports: 
+      - 8080:8080
+      - 8443:8442
   uwsgi:
-    build:
-      context: ./
-      dockerfile: Dockerfile.django
-    image: defectdojo/defectdojo-django:${DJANGO_VERSION:-latest}
-    depends_on:
+    image: defectdojo/defectdojo-django:latest
+    links:
       - mysql
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-uwsgi.sh']
     environment:
       DD_DEBUG: 'False'
-      DD_DJANGO_METRICS_ENABLED: ${DD_DJANGO_METRICS_ENABLED:-False}
-      DD_ALLOWED_HOSTS: ${DD_ALLOWED_HOSTS:-*}
+      DD_DJANGO_METRICS_ENABLED: 'False'
+      DD_ALLOWED_HOSTS: '*'
       DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
-      DD_CELERY_BROKER_USER: ${DD_CELERY_BROKER_USER:-guest}
-      DD_CELERY_BROKER_PASSWORD: ${DD_CELERY_BROKER_USER:-guest}
-      DD_SECRET_KEY: ${DD_SECRET_KEY:-hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq}
-      DD_CREDENTIAL_AES_256_KEY: ${DD_CREDENTIAL_AES_256_KEY:-&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw}
+      DD_CELERY_BROKER_USER: guest
+      DD_CELERY_BROKER_PASSWORD: guest
+      DD_SECRET_KEY: 'hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq'
+      DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   celerybeat:
     image: defectdojo/defectdojo-django:latest
-    depends_on:
+    links:
       - mysql
       - rabbitmq
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-celery-beat.sh']
     environment:
       DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
-      DD_CELERY_BROKER_USER: ${DD_CELERY_BROKER_USER:-guest}
-      DD_CELERY_BROKER_PASSWORD: ${DD_CELERY_BROKER_USER:-guest}
-      DD_SECRET_KEY: ${DD_SECRET_KEY:-hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq}
-      DD_CREDENTIAL_AES_256_KEY: ${DD_CREDENTIAL_AES_256_KEY:-&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw}
+      DD_CELERY_BROKER_USER: guest
+      DD_CELERY_BROKER_PASSWORD: guest
+      DD_SECRET_KEY: 'hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq'
+      DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   celeryworker:
     image: defectdojo/defectdojo-django:latest
-    depends_on:
+    links:
       - mysql
       - rabbitmq
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-celery-worker.sh']
     environment:
       DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
-      DD_CELERY_BROKER_USER: ${DD_CELERY_BROKER_USER:-guest}
-      DD_CELERY_BROKER_PASSWORD: ${DD_CELERY_BROKER_USER:-guest}
-      DD_SECRET_KEY: ${DD_SECRET_KEY:-hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq}
-      DD_CREDENTIAL_AES_256_KEY: ${DD_CREDENTIAL_AES_256_KEY:-&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw}
+      DD_CELERY_BROKER_USER: guest
+      DD_CELERY_BROKER_PASSWORD: guest
+      DD_SECRET_KEY: 'hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq'
+      DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   initializer:
     image: defectdojo/defectdojo-django:latest
-    depends_on:
+    links:
       - mysql
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '--', '/entrypoint-initializer.sh']
     environment:
       DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
-      DD_ADMIN_USER: ${DD_ADMIN_USER:-admin}
-      DD_ADMIN_MAIL: ${DD_ADMIN_USER:-admin@defectdojo.local}
-      DD_ADMIN_FIRST_NAME: ${DD_ADMIN_FIRST_NAME:-Admin}
-      DD_ADMIN_LAST_NAME: ${DD_ADMIN_LAST_NAME:-User}
-      DD_INITIALIZE: ${DD_INITIALIZE:-true}
-      DD_SECRET_KEY: ${DD_SECRET_KEY:-hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq}
-      DD_CREDENTIAL_AES_256_KEY: ${DD_CREDENTIAL_AES_256_KEY:-&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw}
+      DD_ADMIN_USER: admin
+      DD_ADMIN_MAIL: admin@defectdojo.local
+      DD_ADMIN_FIRST_NAME: Admin
+      DD_ADMIN_LAST_NAME: User
+      DD_INITIALIZE: 'true'
+      DD_SECRET_KEY: 'hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq'
+      DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   mysql:
-    image: mysql:5.7.32@sha256:da0936fa5772538548f6fe4e7cb215ad89248cc57e89f1ccc27cb8927ada75de
+    image: mysql:5.7.32
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
       DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
-      MYSQL_USER: ${DD_DATABASE_USER:-defectdojo}
-      MYSQL_PASSWORD: ${DD_DATABASE_PASSWORD:-defectdojo}
-      MYSQL_DATABASE: ${DD_DATABASE_NAME:-defectdojo}
+      MYSQL_USER: defectdojo
+      MYSQL_PASSWORD: defectdojo
+      MYSQL_DATABASE: defectdojo
     command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
     volumes:
        - defectdojo_data:/var/lib/mysql
