--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,19 @@ version: '3'
 services:
   nginx:
     image: defectdojo/defectdojo-nginx:latest
-    links:
-      - uwsgi
     environment:
       NGINX_METRICS_ENABLED: 'false'
     ports: 
       - 8080:8080
-      - 8443:8442
+      - 8443:8443
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: defectdojo
+        awslogs-region: us-east-1
+        awslogs-stream-prefix: web
   uwsgi:
     image: defectdojo/defectdojo-django:latest
-    links:
-      - mysql
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-uwsgi.sh']
     environment:
       DD_DEBUG: 'False'
@@ -26,9 +28,6 @@ services:
       DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   celerybeat:
     image: defectdojo/defectdojo-django:latest
-    links:
-      - mysql
-      - rabbitmq
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-celery-beat.sh']
     environment:
       DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
@@ -38,9 +37,6 @@ services:
       DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   celeryworker:
     image: defectdojo/defectdojo-django:latest
-    links:
-      - mysql
-      - rabbitmq
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-celery-worker.sh']
     environment:
       DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
@@ -50,8 +46,6 @@ services:
       DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   initializer:
     image: defectdojo/defectdojo-django:latest
-    links:
-      - mysql
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '--', '/entrypoint-initializer.sh']
     environment:
       DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
