--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,39 +16,63 @@ services:
         awslogs-stream-prefix: web
   uwsgi:
     image: defectdojo/defectdojo-django:latest
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: defectdojo
+        awslogs-region: us-east-1
+        awslogs-stream-prefix: web
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-uwsgi.sh']
     environment:
       DD_DEBUG: 'False'
       DD_DJANGO_METRICS_ENABLED: 'False'
       DD_ALLOWED_HOSTS: '*'
-      DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
+      DD_DATABASE_URL: ${DD_DATABASE_URL}
       DD_CELERY_BROKER_USER: guest
       DD_CELERY_BROKER_PASSWORD: guest
       DD_SECRET_KEY: 'hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq'
       DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   celerybeat:
     image: defectdojo/defectdojo-django:latest
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: defectdojo
+        awslogs-region: us-east-1
+        awslogs-stream-prefix: web
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-celery-beat.sh']
     environment:
-      DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
+      DD_DATABASE_URL: ${DD_DATABASE_URL}
       DD_CELERY_BROKER_USER: guest
       DD_CELERY_BROKER_PASSWORD: guest
       DD_SECRET_KEY: 'hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq'
       DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   celeryworker:
     image: defectdojo/defectdojo-django:latest
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: defectdojo
+        awslogs-region: us-east-1
+        awslogs-stream-prefix: web
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '-t', '30', '--', '/entrypoint-celery-worker.sh']
     environment:
-      DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
+      DD_DATABASE_URL: ${DD_DATABASE_URL}
       DD_CELERY_BROKER_USER: guest
       DD_CELERY_BROKER_PASSWORD: guest
       DD_SECRET_KEY: 'hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq'
       DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
   initializer:
     image: defectdojo/defectdojo-django:latest
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: defectdojo
+        awslogs-region: us-east-1
+        awslogs-stream-prefix: web
     entrypoint: ['/wait-for-it.sh', 'mysql:3306', '--', '/entrypoint-initializer.sh']
     environment:
-      DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
+      DD_DATABASE_URL: ${DD_DATABASE_URL}
       DD_ADMIN_USER: admin
       DD_ADMIN_MAIL: admin@defectdojo.local
       DD_ADMIN_FIRST_NAME: Admin
@@ -56,18 +80,24 @@ services:
       DD_INITIALIZE: 'true'
       DD_SECRET_KEY: 'hhZCp@D28z!n@NED*yB!ROMt+WzsY*iq'
       DD_CREDENTIAL_AES_256_KEY: '&91a*agLqesc*0DJ+2*bAbsUZfR*4nLw'
-  mysql:
-    image: mysql:5.7.32
-    environment:
-      MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
-      DD_DATABASE_URL: ${DD_DATABASE_URL:-mysql://defectdojo:defectdojo@mysql:3306/defectdojo}
-      MYSQL_USER: defectdojo
-      MYSQL_PASSWORD: defectdojo
-      MYSQL_DATABASE: defectdojo
-    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
-    volumes:
-       - defectdojo_data:/var/lib/mysql
+  # mysql:
+  #   image: mysql:5.7.32
+  #   environment:
+  #     MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+  #     DD_DATABASE_URL: ${DD_DATABASE_URL}
+  #     MYSQL_USER: defectdojo
+  #     MYSQL_PASSWORD: defectdojo
+  #     MYSQL_DATABASE: defectdojo
+  #   command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
+  #   volumes:
+  #      - defectdojo_data:/var/lib/mysql
   rabbitmq:
     image: rabbitmq:3.8.9@sha256:30a52abe6009eea97c89dcd72b9dcf9c2a26563beb4b4d948d595c0415fc8680
+    logging:
+      driver: awslogs
+      options: 
+        awslogs-group: defectdojo
+        awslogs-region: us-east-1
+        awslogs-stream-prefix: web
 volumes:
   defectdojo_data: {}
