--- a/helm/defectdojo/values.yaml
+++ b/helm/defectdojo/values.yaml
@@ -69,14 +69,14 @@ celery:
         memory: 256Mi
     tolerations: []
     app_settings:
-      pool_type: solo
+      #pool_type: solo
       # Performance improved celery worker config when needing to deal with a lot of findings (e.g deduplication ops)
       # Comment out the "solo" line, and uncomment the following lines.
-      # pool_type: prefork
-      # autoscale_min: 2
-      # autoscale_max: 8
-      # concurrency: 8
-      # prefetch_multiplier: 128
+      pool_type: prefork
+      autoscale_min: 2
+      autoscale_max: 8
+      concurrency: 8
+      prefetch_multiplier: 128
 
 django:
   annotations: {}
@@ -87,10 +87,10 @@ django:
     secretName: defectdojo-tls
     annotations:
       # Restricts the type of ingress controller that can interact with our chart (nginx, traefik, ...)
-      #kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: nginx
       # Depending on the size and complexity of your scans, you might want to increase the default ingress timeouts if you see repeated 504 Gateway Timeouts
-      #nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
-      #nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
+      nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
+      nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
   nginx:
     tls:
       enabled: false
